@@ -26,6 +26,7 @@ Revision history for Rex
  - Test internal MD5 checksumming methods
  - Report coverage to Coveralls
  - Add initial test for proc inventory
+ - Test custom template functions
 
 1.12.1 2020-08-05 Ferenc Erki <erkiferenc@gmail.com>
  [DOCUMENTATION]
